# LLM-Summarizer

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test
ollama_summarizer/app/: main.py
